backend_diag.txt
=== BACKEND ERROR LOG (last 50 lines) ===
at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
/var/www/man2man/backend/controllers/adminController.js:614
        const totalSelfDeposit = self_deposits[0]?.total || 0;
              ^

SyntaxError: Identifier 'totalSelfDeposit' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
/var/www/man2man/backend/controllers/adminController.js:614
        const totalSelfDeposit = self_deposits[0]?.total || 0;
              ^

SyntaxError: Identifier 'totalSelfDeposit' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
/var/www/man2man/backend/controllers/adminController.js:614
        const totalSelfDeposit = self_deposits[0]?.total || 0;
              ^

SyntaxError: Identifier 'totalSelfDeposit' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at Hook._require.Module.require (/usr/lib/node_modules/pm2/node_modules/require-in-the-middle/index.js:101:39)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/var/www/man2man/backend/routes/adminRoutes.js:3:25)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)

=== Backend dir check ===
DIAGNOSTIC_LOG.md
HEALTH_REPORT.md
IMPLEMENTATION_PLAN_FINANCE.md
IMPLEMENTATION_PLAN_RESTRICTION.md
REDIS_MISSING.md
RESTORATION_FINAL.md
RESTORATION_REPORT.md
SYSTEM_STATUS.md
aviator_final_check.txt
aviator_stress_final.txt
aviator_stress_final_v2.txt
aviator_stress_final_v3.txt
aviator_stress_final_v4.txt
aviator_stress_final_v5.txt
aviator_stress_final_v6.txt
aviator_stress_final_v7.txt
aviator_stress_report.txt
aviator_stress_report_v2.txt
aviator_stress_report_v3.txt
aviator_stress_report_v4.txt

=== Looking for index.js ===


=== .env check ===
/var/www/man2man/backend/.env
